Index File for Ojas One company added

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                                         <li class="mb-1"><i class="bi bi-check-circle-fill text-success me-2"></i>Bulk Contact Management</li>
                                         <li class="mb-1"><i class="bi bi-check-circle-fill text-success me-2"></i>Customizable Feature Sets</li>
                                     </ul>
-                                    <a href="#" class="btn btn-outline-primary mt-2">View on Google Play</a>
+                                    <a href="sangraha" class="btn btn-outline-primary mt-2">View</a>
                                 </div>
                             </div>
                         </div>
@@ -167,7 +167,7 @@
                                 <div class="card-body">
                                     <h4 class="card-title fw-bold">Anudina - Daily Planner</h4>
                                     <p class="card-text text-secondary">A minimalist daily planner and habit tracker designed to bring clarity and focus to your day.</p>
-                                     <a href="#" class="btn btn-outline-primary mt-2">Coming Soon</a>
+                                     <a href="/anudina" class="btn btn-outline-primary mt-2">Coming Soon</a>
                                 </div>
                             </div>
                         </div>
