--- a/sangraha/index.html
+++ b/sangraha/index.html
@@ -239,7 +239,7 @@
     <!-- Footer -->
     <footer class="bg-white py-4">
         <div class="container text-center text-secondary">
-            <p>&copy; 2025 Sangraha. All Rights Reserved. | <a href="privacy_policy.html" class="text-secondary">Privacy Policy</a></p>
+            <p>&copy; 2025 Sangraha. All Rights Reserved. | <a href="privacy-policy.html" class="text-secondary">Privacy Policy</a></p>
         </div>
     </footer>
 
